--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,12 @@
 order deny,allow
 deny from all
+AuthName "password please"
+AuthUserFile /home/fangchia/.htpasswd
+AuthType Basic
+Require valid-user
 allow from 127.0.0.1
 allow from 63.246.22.222 # bitbucket
 allow from 131.191.82.149 # iMac
 allow from 207.66.136.56 # WFH
 allow from 207.66.231.131 # work iMac
+Satisfy Any
