--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
     "create-react-class": "^15.6.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
+  },
+  "scripts": {
+    "watch": "shadow-cljs watch app test",
+    "release": "shadow-cljs release app"
   }
 }
